<resources>
    <string name="app_name">21</string>
    <string name="new_Game">New Game</string>
    <string name="target_number">Target Number</string>
    <string name="numbers_per_turn">Numbers per Turn</string>
    <string name="computer_player_difficulty">Difficulty</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="start_game">Start Game</string>
    <string name="first_turn">First Turn</string>
    <string name="submit_turn">Submit</string>
    <string name="winner">Winner!</string>
    <string name="loser">You lose</string>
    <string name="play_again">Play Again</string>
    <string name="quit">Quit</string>
</resources>
